<resources>
    <string name="app_name">Week8homework2</string>
    <string name="action_settings">Settings</string>
    <string name="input_your_name">input your name</string>
    <string name="input_your_surname">input your surname</string>
    <string name="ok">Ok</string>
    <string name="surname">surname</string>
    <string name="name">name</string>
    <string name="my_list">MyList</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="message_del">Delete</string>
</resources>
