<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/margin_300"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="@dimen/margin_300"
        android:layout_height="wrap_content"
        android:contentDescription="@string/input_your_name"
        android:hint="@string/name"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/edit_surname"
        android:layout_width="@dimen/margin_300"
        android:layout_height="wrap_content"
        android:contentDescription="@string/input_your_surname"
        android:hint="@string/surname"
        android:inputType="text" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ok"
        />

</LinearLayout>
